Fixed: help page styles
Fixed an issue
where contents in each tab were distorted when you switch.

--- a/src/app/components/main-page/main-help/main-help.component.scss
+++ b/src/app/components/main-page/main-help/main-help.component.scss
@@ -53,10 +53,6 @@
   }
 }
 
-.external-link {
-  @include ui.deco-text($color: var(--prim-clr-6), $icon: 'launch', $icon-size: 2.4rem, $icon-weight: 100);
-}
-
 .faq {
   @include util.flex-col-block($gap: 40px);
 
